--- a/OsuFootPrint2.0/app/src/main/AndroidManifest.xml
+++ b/OsuFootPrint2.0/app/src/main/AndroidManifest.xml
@@ -16,9 +16,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
-            android:name=".LogActivity"
-            android:label="@string/title_activity_log" >
+            android:name=".LoginActivity"
+            android:label="@string/title_activity_login"
+            android:parentActivityName=".Main" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="app.sunshine.android.example.com.osufootprint20.Main" />
+
             <intent-filter>
                 <action android:name="android.intent.action.LogActivity" />
 
@@ -26,32 +32,50 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".NewAccount"
-            android:label="@string/title_activity_new_account" >
+            android:name=".MyFootprint"
+            android:label="@string/title_activity_my_footprint"
+            android:parentActivityName=".LoginActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="app.sunshine.android.example.com.osufootprint20.LoginActivity" />
+
+            <intent-filter>
+                <action android:name="android.intent.action.MyfootprintActivity" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".NewAccounts"
+            android:label="@string/title_activity_new_accounts"
+            android:parentActivityName=".Main" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="app.sunshine.android.example.com.osufootprint20.Main" />
             <intent-filter>
                 <action android:name="android.intent.action.NewAccountActivity" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
         <activity
-            android:name=".Myfootprints"
-            android:label="@string/title_activity_myfootprints" >
-            <intent-filter>
-                <action android:name="android.intent.action.MyfootprintActivity" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".PopActivity"
-            android:label="@string/title_activity_pop" >
+            android:name=".PopActivities"
+            android:label="@string/title_activity_pop_activities"
+            android:parentActivityName=".LoginActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="app.sunshine.android.example.com.osufootprint20.LoginActivity" />
             <intent-filter>
                 <action android:name="android.intent.action.PopfootprintActivity" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
         <activity
-            android:name=".WishlistActivity"
-            android:label="@string/title_activity_wishlist" >
+            android:name=".MyWishlist"
+            android:label="@string/title_activity_my_wishlist"
+            android:parentActivityName=".LoginActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="app.sunshine.android.example.com.osufootprint20.LoginActivity" />
             <intent-filter>
                 <action android:name="android.intent.action.MywishlistActivity" />
                 <category android:name="android.intent.category.DEFAULT" />
