--- a/OsuFootPrint3.0/app/src/main/AndroidManifest.xml
+++ b/OsuFootPrint3.0/app/src/main/AndroidManifest.xml
@@ -2,11 +2,37 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="app.sunshine.android.example.com.osufootprint20" >
 
+    <uses-sdk
+        android:minSdkVersion="10"
+        android:targetSdkVersion="19" />
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <!-- External storage for caching. -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <!-- My Location -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+    <uses-feature
+        android:name="android.hardware.location.gps"
+        android:required="true" />
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/osulogo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyAfiSMEXs_6DuAKmIj1Hs_lT3ashkZcPTQ" />
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
         <activity
             android:name=".Main"
             android:label="@string/app_name" >
@@ -16,7 +42,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".LoginActivity"
             android:label="@string/title_activity_login"
@@ -52,8 +77,10 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="app.sunshine.android.example.com.osufootprint20.Main" />
+
             <intent-filter>
                 <action android:name="android.intent.action.NewAccountActivity" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
@@ -64,8 +91,10 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="app.sunshine.android.example.com.osufootprint20.LoginActivity" />
+
             <intent-filter>
                 <action android:name="android.intent.action.PopfootprintActivity" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
@@ -76,8 +105,26 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="app.sunshine.android.example.com.osufootprint20.LoginActivity" />
+
             <intent-filter>
                 <action android:name="android.intent.action.MywishlistActivity" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".MyLocation"
+            android:label="@string/title_activity_my_location" >
+            <intent-filter>
+                <action android:name="android.intent.action.MyLocation" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".FootprintMap"
+            android:label="@string/title_activity_footprint_map" >
+            <intent-filter>
+                <action android:name="android.intent.action.FootprintMap" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
