--- a/OsuFootPrint4.0/app/src/main/AndroidManifest.xml
+++ b/OsuFootPrint4.0/app/src/main/AndroidManifest.xml
@@ -157,6 +157,19 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".SelectPlace"
+            android:label="@string/title_activity_select_place"
+            android:parentActivityName=".NewFootprintActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="app.sunshine.android.example.com.osufootprint20.NewFootprintActivity" />
+            <intent-filter>
+                <action android:name="android.intent.action.SelectPlace" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
