--- a/OsuFootPrint6.0/app/build.gradle
+++ b/OsuFootPrint6.0/app/build.gradle
@@ -19,8 +19,11 @@ android {
     }
 }
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:20.0.0'
     compile 'com.google.android.gms:play-services:6.1.11'
     compile 'com.android.support:support-v4:20.0.0'
+    compile files('F:/APP/version1.0/version1.0/OsuFootPrint6.0/libs/gson-2.2.2.jar')
+    compile files('F:/APP/version1.0/version1.0/OsuFootPrint6.0/libs/gson-2.2.2-javadoc.jar')
+    compile files('F:/APP/version1.0/version1.0/OsuFootPrint6.0/libs/gson-2.2.2-sources.jar')
 }
